# bookshelf

./: .gitignore  Cargo.toml  README.md  TODO.md
examples/: example_module.py  example_module.sh
src/: args.yaml  config.rs  fsio.rs  main.rs  module_handler.rs  shelf.rs  tui.rs
src/tui/: mod.rs  ui.rs
