[package]
name = "bookshelf"
version = "1.0.2"
authors = ["ChocolateOverflow"]
edition = "2018"
license = "GPL-3.0"
description = "A small and modular media manager"

[dependencies]
bincode = "1.3.1"
clap = { version = "~3.0.0-beta.2", features = ["yaml"] }
dirs = "3.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
shellexpand = "2.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
