[package]
name = "bookshelf"
version = "1.1.4"
authors = ["ChocolateOverflow"]
edition = "2018"
license = "GPL-3.0"
description = "A small and modular media manager"
repository = "https://github.com/ChocolateOverflow/shelf"

[dependencies]
bincode = "1.3.1"
clap = { version = "~3.0.0-beta.2", features = ["yaml"] }
termion = "1"
dirs-next = "2"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
shellexpand = "2.1"
tui = { version = "0.14", default-features = false, features = ['termion'] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
